# radioscraper

./: .eslintrc  .flake8  .gitignore  .travis.yml  DEPLOY.md  Makefile  README.md  TODO.md  fabfile.py  manage.py  package.json  project.env.dist  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.prod.txt  requirements.test.txt  requirements.txt  webpack.config.js
api/: urls.py  views.py
dashboard/: urls.py  views.py
loaders/: admin.py  apps.py  context.py  loaders.py  models.py  urls.py  utils.py  views.py
loaders/implementations/: antena.py  bravo.py  enter.py  extrafm.py  gold.py  happy.py  hrt1.py  hrt2.py  hrt3.py  korzo.py  laganini.py  martin.py  nacional.py  narodni.py  otvoreni.py  radio1.py  radio101.py  radio808.py  rijeka.py  scrambler.py  sljeme.py  student.py  top.py  tvornica.py  unios.py  yammat.py  zabavni.py
loaders/migrations/: 0001_initial.py  0002_auto_20200311_1220.py  0003_auto_20200404_1158.py  0004_auto_20200520_1524.py
loaders/tests/: test_add_play.py
music/: admin.py  models.py  urls.py  utils.py  views.py
music/migrations/: 0001_initial.py  0002_indices.py  (+2 more)
radio/: admin.py  context.py  models.py  tests.py  urls.py  utils.py  views.py
radioscraper/: env.py  mixins.py  settings.py  shoutcast.py  urls.py  wsgi.py
static/: bundle.js  bundle.js.map  commons.min.js  commons.min.js.map  index.js  index.js.map  main.js  main.js.map  main.min.js  main.min.js.map  plays.js  plays.js.map  plays.min.js  plays.min.js.map  stats.js  stats.js.map  stats.min.js  stats.min.js.map  styles.css
ui/: index.js  urls.py  views.py
(+107 files in other folders)
