[project]
name = "radioscraper"
version = "0.1.0"
description = "Collecting radio playlists for no particular reason."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]~=3.10",
    "beautifulsoup4~=4.12",
    "dj-database-url~=2.0",
    "django-extensions~=3.2",
    "django~=4.2",
    "gunicorn~=22.0",
    "psycopg2-binary~=2.9",
    "python-dateutil~=2.9",
    "pytz",
    "sentry-sdk[django]",
]

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "django-stubs~=4.2",
    "fabric",
    "factory-boy",
    "ipython",
    "pytest",
    "pytest-django",
]
